2007-11-07 [paul]	3.0.2cvs122

	* src/toolbar.c
		MAEMO: remove tooltips

2007-11-07 [colin]	3.0.2cvs121

	* src/plugins/pgpinline/pgpinline.c
		Fix bug 1377, 'unspecific errors on 
		signature checking'. Fix trimming of
		UTF8 data.

2007-11-06 [iwkse]	3.0.2cvs120

	* src/prefs_summary_open.c
		yet a string change

2007-11-06 [paul]	3.0.2cvs119

	* tools/Makefile.am
	* tools/README
	* tools/csv2addressbook.pl
		add a new script that imports a CSV formatted
		address book. Becky and Thunderbird address
		book are currently supported.

2007-11-05 [colin]	3.0.2cvs118

	* src/imap.c
		Fix deletion 

2007-11-05 [iwkse]	3.0.2cvs117

	* src/prefs_summary_open.c
		String changes

2007-11-04 [paul]	3.0.2cvs116

	* src/addressbook_foldersel.c
		fix gtk critical warning
		Patch by Pawel Pekala

2007-11-04 [paul]	3.0.2cvs115

	* tools/README
	* tools/claws-mail-compose-insert-files.pl
		add --bcc and uri_escape() everything

2007-11-04 [paul]	3.0.2cvs114

	* src/gtk/gtkutils.c
		gtkut_stock_with_text_button_set_create(): set
		GTK_CAN_DEFAULT on buttons 2 and 3

2007-11-03 [paul]	3.0.2cvs113

	* src/common/utils.c
		fix debian bug #448814, 'mailto: URI decoding
		desn't decode the destination address field'
		Patch by Federico Heinz <fheinz@vialibre.org.ar>

2007-11-03 [paul]	3.0.2cvs112

	* AUTHORS
	* src/compose.c
	* src/gtk/authors.h
		allow Bcc in commandline URIs
		(based on) Patch by Federico Heinz <fheinz@vialibre.org.ar>

2007-11-02 [colin]	3.0.2cvs111

	* src/addressbook.c
		Maybe fix bug 1376, 'crash on 
		addressbook manipulation'

2007-10-31 [paul]	3.0.2cvs110

	* src/ldapupdate.c
		fix bug 1375, 'Impossible to modify e-mail
		in LDAP addressbook twice'
		Patch by Michael Rasmussen

2007-10-30 [paul]	3.0.2cvs109

	* configure.ac
		enable GnuTLS support with --enable-gnutls which
		will disable openssl support. if the user has
		gtk >= 2.10.x don't allow gnomeprint even if the
		user asks for it

2007-10-30 [paul]

	3.1.0-rc1 released

2007-10-30 [paul]	3.0.2cvs108