@@ -3035,3 +3035,4 @@
 ( cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/prefs_summary_open.c;  ) > 3.0.2cvs120.patchset
 ( cvs diff -u -r 1.1.2.36 -r 1.1.2.37 src/plugins/pgpinline/pgpinline.c;  ) > 3.0.2cvs121.patchset
 ( cvs diff -u -r 1.43.2.90 -r 1.43.2.91 src/toolbar.c;  ) > 3.0.2cvs122.patchset
+( cvs diff -u -r 1.30.2.46 -r 1.30.2.47 src/prefs_toolbar.c;  cvs diff -u -r 1.43.2.91 -r 1.43.2.92 src/toolbar.c;  cvs diff -u -r 1.19.2.25 -r 1.19.2.26 src/toolbar.h;  ) > 3.0.2cvs123.patchset
